# SDL2-Bike-Game

./: .gitignore  CMakeLists.txt  README.md  SDL2-day2.sublime-project  SDL2-day2.sublime-workspace  instruction.txt
include/: Game.h  Obstacle.h  Player.h
src/: Game.cpp  Obstacle.cpp  Player.cpp  main.cpp
